# HAIR-IRremote

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  conftest.py  deploy.bat  deploy.sh  hacs.json  llms.txt  pyproject.toml  restart_encode_server.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-native.yml  ci.yml  release.yml
custom_components/hair/: __init__.py  button.py  capture.py  capture_orchestrator.py  climate.py  command_templates.py  config_flow.py  const.py  cover.py  device_manager.py  diagnostics.py  entity_factory.py  event.py  event_parser.py  fan.py  icons.json  ir_command.py  light.py  manifest.json  media_player.py  models.py  remote.py  signal_monitor.py  signal_store.py  storage.py  strings.json  switch.py  trigger_manager.py  websocket_api.py
custom_components/hair/encoder/: __init__.py  encode_server.py  encode_worker.py  irremote_ac.py  loader.py  subprocess_encode.py
custom_components/hair/frontend/: package-lock.json  package.json  rollup.config.mjs  tsconfig.json
custom_components/hair/tests/: __init__.py  conftest.py  test_capture.py  test_capture_orchestrator.py  test_command_templates.py  test_config_flow.py  test_device_manager.py  test_diagnostics.py  test_entities.py  test_entity_factory.py  test_event_parser.py  test_init.py  test_ir_command.py  test_irremote_encoder.py  test_loader.py  test_models.py  (+5 more)
esphome/: ir-blaster-example.yaml
scripts/: package_native.sh  sync_protocol_list.py
(+15 files in other folders)
