[project]
name = "hair-irremote"
version = "0.2.0-alpha"
description = "HAIR-IRremote - Home Assistant IR Device Manager with Protocol AC encoding"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "David Bailey", email = "david.a.bailey@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools.packages.find]
include = ["custom_components*"]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
lint = [
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["custom_components/hair/tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 99
exclude = ["vendor/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
